--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--  SEO meta  -->
     <meta property="og:type" content="website">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="GW Leaderboard Example">
+    <meta property="og:site_name" content="Catto Blog">
     <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
 
@@ -18,21 +18,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--  Hojas de estilo  -->
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./cards.css">
-    <link rel="stylesheet" href="./search.css">
-    <link rel="stylesheet" href="./menu.css">
-    <link rel="stylesheet" href="./content.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/cards.css">
+    <link rel="stylesheet" href="./css/search.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/content.css">
     <link rel="stylesheet" href="../base/loader.css">
 
     <!--  Scripts  -->
-    <script src="../base/tools.js"></script>
-    <script src="./classes.js"></script>
-    <script src="./script.js"></script>
-    <script src="../base/loader.js"></script>
+    <script src="./base/tools.js"></script>
+    <script src="./js/classes.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./base/loader.js"></script>
 
     <!--  Título  -->
-    <title>Catto • Support</title>
+    <title>Catto Blog</title>
 
 </head>
 
@@ -121,7 +121,7 @@
                     <path id="path878" style="stroke-width:7.97231;stroke-linecap:round;stroke-linejoin:round" d="M 194.31641 42.142578 A 147.11223 147.0457 0 0 0 47.205078 189.18945 A 147.11223 147.0457 0 0 0 194.31641 336.23438 A 147.11223 147.0457 0 0 0 198.87305 336.16406 L 198.29688 336.06445 C 225.90282 333.81606 255.86011 320.63516 276.78516 301.07227 C 293.70708 285.2519 306.38927 262.62625 309.28516 239.64258 C 312.08618 217.41176 303.99582 194.11958 293.57227 174.28516 C 285.17213 158.30099 258.44533 134.69908 257.375 133.98242 C 256.30467 133.26577 255.29392 133.75244 255.41797 135.61133 C 255.41797 135.61133 255.70989 142.87452 254.96484 146.39453 C 254.16302 150.18269 251.06596 152.53763 249.32031 152.76953 C 248.79974 152.8387 248.05563 152.87522 247.94141 152.49023 C 247.66822 151.56944 248.81621 150.06679 248.58594 146.36133 C 248.40898 143.5137 245.52127 138.90939 244.13477 137.16406 C 241.2591 133.54417 240.32505 132.51639 239.375 131.85352 C 238.68075 131.36912 237.16885 130.9228 236.44531 132.89844 C 235.01634 136.80026 230.29974 151.51323 222.04492 154.2207 C 209.83535 158.22528 203.45469 163.95437 197.57227 172.18945 C 194.37889 176.66001 193.19278 182.45261 192.65234 187.91992 C 192.17113 192.78811 193.44577 196.15863 194.20508 202.51367 C 194.63656 206.12494 188.82138 217.70284 186.94922 218.55859 C 188.77622 221.63684 195.06363 232.86699 200.95508 235.63477 C 210.56882 240.15126 222.44108 237.59025 232.81836 235.32422 C 239.20445 233.92972 247.83803 228.9592 250.72266 227.32422 C 253.60728 225.68924 253.53667 227.84929 252.68359 228.71484 C 251.83052 229.5804 245.66109 236.54422 241.08594 238.89648 C 229.08652 245.06584 215.12409 247.10979 201.66797 248.09961 C 187.29847 249.15661 172.99521 244.24542 158.58984 244.53711 C 148.02189 244.75111 137.12772 245.02837 127.11914 248.42773 C 116.28677 252.1069 97.539063 265.83203 97.539062 265.83203 C 75.79123 243.24725 70.683014 213.9284 69.824219 185.66797 C 69.18247 164.54997 76.582382 143.07701 86.859375 124.61719 C 94.348819 111.16445 105.93354 100.01579 118.13672 90.626953 C 131.39631 80.425343 146.3277 71.346357 162.54688 67.244141 C 182.12239 62.293024 203.42841 62.116936 223.11914 66.587891 C 240.85547 70.615079 257.77881 79.437229 272.07422 90.681641 C 284.17113 100.19677 299.23257 122.87949 301.64844 126.14062 C 304.06431 129.40176 311.13633 134.10605 316.95117 135.49609 C 320.7909 136.41399 327.72034 135.24466 330.91992 134.60938 A 147.11223 147.0457 0 0 0 194.31641 42.142578 z " transform="scale(0.26458333)" />
                 </g>
             </svg>
-            <h1>Catto help center</h1>
+            <h1>Catto blog</h1>
             <button class="tooltip" onclick="openSearcher()">
                 <svg viewBox="0 0 24 24">
                     <path fill-rule="evenodd" d="M14.71 14h.79l4.99 5L19 20.49l-5-4.99v-.79l-.27-.28A6.471 6.471 0 0 1 9.5 16 6.5 6.5 0 1 1 16 9.5c0 1.61-.59 3.09-1.57 4.23l.28.27ZM5 9.5C5 11.99 7.01 14 9.5 14S14 11.99 14 9.5 11.99 5 9.5 5 5 7.01 5 9.5Z" clip-rule="evenodd"></path>
